--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,15 +1,26 @@
-
-.normal {
-  font-family: Georgia, sans-serif;
-  text-align: center;
+.page {
+  min-width: 1200px;
+  min-height: 100vh;
 }
-
-.title {
-  font-size: 2.5rem;
-  font-weight: normal;
-  letter-spacing: -1px;
-  background: darkslateblue;
-  padding: .6em 0;
-  color: white;
-  margin: 0;
+#logo {
+  float: left;
+  padding: 0 20px;
+}
+.nav {
+  float: left;
+}
+.nav :global(.ant-menu-item) {
+  line-height: 64px;
+}
+.loginNav {
+  float: right;
+  line-height: 64px;
+}
+.loginNav a {
+  color: rgba(255, 255, 255, .6)
+}
+.loginNav span {
+  margin: 0 10px;
+  font-family: "宋体";
+  color: rgba(255, 255, 255, .6)
 }
