--- a/src/assets/less/markdown.less
+++ b/src/assets/less/markdown.less
@@ -3,7 +3,7 @@
     h1,h2,h3,h4 {
         color:#111111;
         font-weight:400;
-        margin-top:1em;
+        margin-top:.5em;
     }
     h1,h2,h3,h4,h5 {
         font-family:Georgia,Palatino,serif;
@@ -13,28 +13,28 @@
         padding:0;
     }
     h1 {
-        font-size:48px;
-        line-height:54px;
+        font-size:30px;
+        line-height:40px;
     }
     h2 {
-        font-size:36px;
-        line-height:42px;
+        font-size:24px;
+        line-height:36px;  
     }
     h1,h2 {
         border-bottom:1px solid #EFEAEA;
         padding-bottom:10px;
     }
     h3 {
-        font-size:24px;
+        font-size:18px;
         line-height:30px;
     }
     h4 {
-        font-size:21px;
+        font-size:14px;
         line-height:26px;
     }
     h5 {
-        font-size:18px;
-        list-style:23px;
+        font-size:12px;
+        list-style:18px;
     }
     a {
         color:#0099ff;
